[gd_resource type="PackedScene" load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/story/Barracks.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/DialogueBox.tscn" id="2"]

[node name="Barracks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.06, 1)

[node name="NPCDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "The Barracks"
horizontal_alignment = 1

[node name="SelectionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -200.0
offset_right = 340.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SelectionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="Content" type="VBoxContainer" parent="SelectionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NamePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="NamePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameInput" type="LineEdit" parent="NamePanel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
theme_override_font_sizes/font_size = 16
placeholder_text = "Enter the guard's name..."
alignment = 1
max_length = 20

[node name="ConfirmButton" type="Button" parent="NamePanel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
theme_override_font_sizes/font_size = 14
text = "Confirm Name"

[node name="DialogueBox" parent="." instance=ExtResource("2")]
layout_mode = 1
